[gd_scene load_steps=30 format=3 uid="uid://d0rv01klybh31"]

[ext_resource type="Script" path="res://vehicles/bluerovheavy/BlueROV2Heavy.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d2pk0jdvrv5gh" path="res://vehicles/components/newton.tscn" id="2"]
[ext_resource type="Environment" uid="uid://dk0nt41fjw0nr" path="res://scenery/underwaterEnvironment.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://1wagv83d1du3" path="res://vehicles/bluerovheavy/bluerov_cleaned_decimated_colorfixed.tscn" id="5_8sfg2"]
[ext_resource type="PackedScene" uid="uid://btr1l5hx0wqm2" path="res://vehicles/components/ping360.tscn" id="6"]
[ext_resource type="Material" uid="uid://dyoxl3tmy5jyu" path="res://vehicles/bluerovheavy/lights.tres" id="6_hjxqs"]
[ext_resource type="Material" uid="uid://d1ycf6y3di02h" path="res://scenery/shaders/suspended_particle_shader.tres" id="9_tkchf"]
[ext_resource type="Texture2D" uid="uid://cw4vusa7mtobl" path="res://scenery/shaders/shader_textures/white-alpha-fix.png" id="10_o65lm"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_n3gys"]
friction = 0.0

[sub_resource type="BoxShape3D" id="13"]
size = Vector3(1.01712, 0.482312, 0.907382)

[sub_resource type="Curve" id="Curve_mvayp"]
_data = [Vector2(0.0935252, 0.02), 0.0, 0.0, 0, 0, Vector2(0.496403, 0.796), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tjxvj"]
curve = SubResource("Curve_mvayp")

[sub_resource type="Curve" id="Curve_g7jq1"]
_data = [Vector2(0.0467626, 0.024), 0.0, 0.0, 0, 0, Vector2(0.507194, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_kdor4"]
curve = SubResource("Curve_g7jq1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtb5u"]
lifetime_randomness = 0.3
emission_shape = 3
emission_box_extents = Vector3(3, 1, 3)
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
alpha_curve = SubResource("CurveTexture_tjxvj")
emission_curve = SubResource("CurveTexture_kdor4")

[sub_resource type="QuadMesh" id="QuadMesh_xcnml"]
material = ExtResource("9_tkchf")
size = Vector2(1, 10)

[sub_resource type="Shader" id="Shader_msdmn"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.2.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_add,depth_draw_never,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color,filter_linear_mipmap,repeat_enable;
uniform float point_size : hint_range(0,128);
uniform float roughness : hint_range(0,1);
uniform sampler2D texture_metallic : hint_default_white,filter_linear_mipmap,repeat_enable;
uniform vec4 metallic_texture_channel;
uniform sampler2D texture_roughness : hint_roughness_r,filter_linear_mipmap,repeat_enable;
uniform float specular;
uniform float metallic;
uniform int particles_anim_h_frames;
uniform int particles_anim_v_frames;
uniform bool particles_anim_loop;
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;


void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	mat4 mat_world = mat4(normalize(INV_VIEW_MATRIX[0]), normalize(INV_VIEW_MATRIX[1]) ,normalize(INV_VIEW_MATRIX[2]), MODEL_MATRIX[3]);
	mat_world = mat_world * mat4(vec4(cos(INSTANCE_CUSTOM.x), -sin(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(sin(INSTANCE_CUSTOM.x), cos(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(0.0, 0.0, 1.0, 0.0), vec4(0.0, 0.0, 0.0, 1.0));
	MODELVIEW_MATRIX = VIEW_MATRIX * mat_world;
	MODELVIEW_NORMAL_MATRIX = mat3(MODELVIEW_MATRIX);
	float h_frames = float(particles_anim_h_frames);
	float v_frames = float(particles_anim_v_frames);
	float particle_total_frames = float(particles_anim_h_frames * particles_anim_v_frames);
	float particle_frame = floor(INSTANCE_CUSTOM.z * float(particle_total_frames));
	if (!particles_anim_loop) {
		particle_frame = clamp(particle_frame, 0.0, particle_total_frames - 1.0);
	} else {
		particle_frame = mod(particle_frame, particle_total_frames);
	}
	UV /= vec2(h_frames, v_frames);
	UV += vec2(mod(particle_frame, h_frames) / h_frames, floor((particle_frame + 0.5) / h_frames) / v_frames);
}






void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	albedo_tex *= COLOR;
	ALBEDO = albedo.rgb * albedo_tex.rgb;
	float metallic_tex = dot(texture(texture_metallic,base_uv),metallic_texture_channel);
	METALLIC = metallic_tex * metallic;
	vec4 roughness_texture_channel = vec4(1.0,0.0,0.0,0.0);
	float roughness_tex = dot(texture(texture_roughness,base_uv),roughness_texture_channel);
	ROUGHNESS = roughness_tex * roughness;
	SPECULAR = specular;
	ALPHA *= albedo_tex.a ;
}

void light() {
	if (!LIGHT_IS_DIRECTIONAL) {
		DIFFUSE_LIGHT += LIGHT_COLOR * ALBEDO * 10.0;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t5su8"]
render_priority = 0
shader = SubResource("Shader_msdmn")
shader_parameter/albedo = Color(0.47451, 0.509804, 0.380392, 0.301961)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/particles_anim_h_frames = 1
shader_parameter/particles_anim_v_frames = 1
shader_parameter/particles_anim_loop = false
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)
shader_parameter/texture_albedo = ExtResource("10_o65lm")

[sub_resource type="Curve" id="Curve_mylu8"]
_data = [Vector2(0, 0.0073266), 0.0, 0.0, 0, 0, Vector2(0.319846, 0.475089), 0.0, 0.0, 0, 0, Vector2(0.803468, 0.500488), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_hrjyk"]
curve = SubResource("Curve_mylu8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jbk4c"]
emission_shape_scale = Vector3(2, 1, 1.5)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_min = 0.5
scale_max = 2.0
alpha_curve = SubResource("CurveTexture_hrjyk")
hue_variation_min = 1.0
hue_variation_max = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_8yvbp"]
size = Vector2(0.01, 0.01)

[sub_resource type="CylinderMesh" id="14"]

[sub_resource type="BoxMesh" id="16"]

[sub_resource type="BoxMesh" id="21"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_swiu1"]
radius = 0.075445

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c2kyp"]
height = 2.49791

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hw077"]
height = 2.585

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gmdud"]
albedo_color = Color(0.309804, 0.309804, 0.309804, 1)

[node name="BlueRovHeavy" type="Node3D"]
process_mode = 3

[node name="BlueRov" type="RigidBody3D" parent="." groups=["buoyant", "vehicles"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0262519, 0, 0.0185718)
mass = 11.0
physics_material_override = SubResource("PhysicsMaterial_n3gys")
center_of_mass_mode = 1
can_sleep = false
linear_damp_mode = 1
linear_damp = 1.398
angular_damp = 5.0
script = ExtResource("1")

[node name="t1" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.186456, -0.186456, 3.03776e-08, 0, -4.29603e-08, -0.263689, 0.186456, 0.186456, -3.03776e-08, -0.192815, -0.125495, 0.284096)

[node name="t2" type="Node3D" parent="BlueRov"]
transform = Transform3D(-0.186456, -0.186456, 3.03776e-08, 0, -4.29604e-08, -0.263689, 0.186456, -0.186456, 3.03776e-08, 0.175115, -0.125495, 0.284096)

[node name="t3" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.186456, 0.186456, -3.03776e-08, 0, -4.29604e-08, -0.263689, -0.186456, 0.186456, -3.03776e-08, -0.198316, -0.125495, -0.320506)

[node name="t4" type="Node3D" parent="BlueRov"]
transform = Transform3D(-0.186456, 0.186456, -3.03776e-08, 0, -4.29604e-08, -0.263689, -0.186456, -0.186456, 3.03776e-08, 0.197343, -0.125495, -0.33162)

[node name="t5" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.00654368, -0.263608, 0, 0.263608, 0.00654368, 7.10543e-15, 1.77636e-15, 8.88178e-16, 0.263689, -0.432878, 0.032324, 0.228526)

[node name="t6" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.00654368, -0.263608, 0, 0.263608, 0.00654368, 7.10543e-15, 1.77636e-15, 6.38378e-16, 0.263689, 0.434015, 0.032324, 0.228526)

[node name="t7" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.00654368, -0.263608, 0, 0.263608, 0.00654368, 7.10543e-15, 1.77636e-15, 6.38378e-16, 0.263689, -0.437324, 0.032324, -0.247154)

[node name="t8" type="Node3D" parent="BlueRov"]
transform = Transform3D(0.00654368, -0.263608, 0, 0.263608, 0.00654368, 7.10543e-15, 1.77636e-15, 6.38378e-16, 0.263689, 0.42957, 0.032324, -0.247154)

[node name="newton" parent="BlueRov" instance=ExtResource("2")]
transform = Transform3D(0.303697, -0.141171, 6.1708e-09, 0, -1.46392e-08, -0.334905, 0.141171, 0.303697, -1.3275e-08, 0.205347, -0.255554, 0.0565558)
visible = false

[node name="cameraTarget" type="Node3D" parent="BlueRov"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.287675, -0.952809)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BlueRov"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.86265e-09, -0.0931243, -0.0504753)
shape = SubResource("13")

[node name="light1" type="SpotLight3D" parent="BlueRov"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.337544, -0.199193, 0.496962)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 10.0
light_size = 0.03
shadow_enabled = true
spot_attenuation = 1.06066
spot_angle = 62.5
spot_angle_attenuation = 0.96

[node name="light2" type="SpotLight3D" parent="BlueRov"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.389553, -0.199193, 0.496962)
light_energy = 0.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 10.0
shadow_enabled = true
spot_attenuation = 1.06066
spot_angle = 62.5
spot_angle_attenuation = 0.779762

[node name="light4" type="SpotLight3D" parent="BlueRov"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.337544, 0.132225, 0.496962)
visible = false
shadow_enabled = true
shadow_bias = 0.07
shadow_reverse_cull_face = true
spot_range = 13.0
spot_attenuation = 6.0
spot_angle = 70.0
spot_angle_attenuation = 0.48

[node name="light3" type="SpotLight3D" parent="BlueRov"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.389553, 0.132225, 0.513961)
visible = false
shadow_enabled = true
shadow_bias = 0.05
shadow_reverse_cull_face = true
spot_range = 13.0
spot_attenuation = 6.0
spot_angle = 71.0
spot_angle_attenuation = 0.48

[node name="Camera3D" type="Camera3D" parent="BlueRov" groups=["cameras"]]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.00410311, 0.0132817, 0.378081)
cull_mask = 1048573
environment = ExtResource("4")
fov = 100.0
far = 640.7

[node name="bluerov cleaned decimated2" parent="BlueRov" instance=ExtResource("5_8sfg2")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.176097, -0.0977513, -0.116651)

[node name="GPUParticles3D" type="GPUParticles3D" parent="BlueRov/bluerov cleaned decimated2"]
transform = Transform3D(-8.74228e-08, 1.74846e-07, 2, 0, -2, 1.74846e-07, 2, 7.64275e-15, 8.74228e-08, 0.407047, -4.04314, 10.5858)
visible = false
amount = 15
explosiveness = 0.05
randomness = 0.3
transform_align = 1
process_material = SubResource("ParticleProcessMaterial_rtb5u")
draw_pass_1 = SubResource("QuadMesh_xcnml")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="BlueRov/bluerov cleaned decimated2"]
transform = Transform3D(-8.74228e-08, 1.74846e-07, 2, 0, -2, 1.74846e-07, 2, 7.64275e-15, 8.74228e-08, -0.639294, -0.117958, 2.14083)
visible = false
material_override = SubResource("ShaderMaterial_t5su8")
amount = 5000
lifetime = 5.0
randomness = 0.3
visibility_aabb = AABB(-3.94601, -1.33526, -1.8542, 6.9633, 2.67052, 3.70839)
process_material = SubResource("ParticleProcessMaterial_jbk4c")
draw_pass_1 = SubResource("QuadMesh_8yvbp")

[node name="scatterlight" type="OmniLight3D" parent="BlueRov"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00951934, 0.766427)
visible = false
light_energy = 0.0
omni_attenuation = 9.18959

[node name="light_glow" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(-0.0348938, 0, 0, 0, -0.00095478, 0.0345276, 1.58963e-17, 0.00653839, 0.00504197, 0.374692, 0.100628, 0.403364)
mesh = SubResource("14")
surface_material_override/0 = ExtResource("6_hjxqs")

[node name="light_glow2" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(-0.0348938, 0, 0, 0, -0.00095478, 0.0345276, 1.58963e-17, 0.00653839, 0.00504197, -0.377187, 0.100628, 0.403364)
mesh = SubResource("14")
surface_material_override/0 = ExtResource("6_hjxqs")

[node name="light_glow3" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(-0.0348938, 0, 0, 0, -0.00215846, 0.0329797, 1.58963e-17, 0.00624525, 0.0113983, 0.374692, -0.23366, 0.411267)
mesh = SubResource("14")
surface_material_override/0 = ExtResource("6_hjxqs")

[node name="light_glow4" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(-0.0348938, 0, 0, 0, -0.00215846, 0.0329797, 1.58963e-17, 0.00624525, 0.0113983, -0.377187, -0.23366, 0.411267)
mesh = SubResource("14")
surface_material_override/0 = ExtResource("6_hjxqs")

[node name="greenled" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(0.00692338, 0, 0, 0, 0.00593798, 0, 3.31675e-18, 0, 0.0118189, 0.0306498, 0.0627247, 0.169972)
mesh = SubResource("16")

[node name="redled" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(0.00692338, 0, 0, 0, 0.00593798, 0, 3.31675e-18, 0, 0.0118189, 0.0306498, 0.0627247, 0.13759)
mesh = SubResource("16")

[node name="ping1d" type="RayCast3D" parent="BlueRov"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0185718, -0.366762, 0.0262519)
target_position = Vector3(2.08165e-12, -100, 2.08165e-12)

[node name="sonar" parent="BlueRov" instance=ExtResource("6")]
transform = Transform3D(0.0604882, -2.48175e-17, -0.0106657, 2.14229e-17, 0.0614213, -2.14229e-17, 0.0106657, 1.73774e-17, 0.0604882, -0.242128, 0.278755, -0.0115182)
mesh = SubResource("21")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="BlueRov"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98023e-08, 0.0134256, 0.392363)
shape = SubResource("SphereShape3D_swiu1")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="BlueRov"]
transform = Transform3D(0.104631, -4.57358e-09, 4.57358e-09, 4.57358e-09, -4.57358e-09, -0.104631, 4.57358e-09, 0.104631, -4.57358e-09, -0.00699029, -0.213257, 0.451136)
shape = SubResource("CapsuleShape3D_c2kyp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BlueRov"]
transform = Transform3D(0.104631, -4.57358e-09, 4.57358e-09, 4.57358e-09, -4.57358e-09, -0.104631, 4.57358e-09, 0.104631, -4.57358e-09, -0.00699029, -0.213257, 0.451136)
mesh = SubResource("CapsuleMesh_hw077")
surface_material_override/0 = SubResource("StandardMaterial3D_gmdud")
